<resources>
    <string name="app_name">ListViewPersonalizado</string>
    <string name="registrar_carros">Registrar Carros</string>
    <string name="listar_carros">Listar Carros</string>
    <string name="reportes">Reportes</string>
    <string name="registro_de_carros">Registro De Carros</string>
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="error_1">Digite la Placa</string>
    <string name="error_2">Digite el Precio</string>
    <string name="mensaje_1">Carro Registrado</string>
    <string name="mensaje_registro">Carro Registrado</string>
    <string name="mazda">Mazda</string>
    <string name="toyota">Toyota</string>
    <string name="renault">Renault</string>
    <string name="chevrolet">Chevrolet</string>
    <string name="dosmildiez">2010</string>
    <string name="dosmilonce">2011</string>
    <string name="dosmildoce">2012</string>
    <string name="dosmiltrece">2013</string>
    <string name="dosmilcatorce">2014</string>
    <string name="dosmilquince">2015</string>
    <string name="rojo">Rojo</string>
    <string name="blanco">Blanco</string>
    <string name="negro">Negro</string>
    <string name="reporte1">No. De Carros Registrados</string>
    <string name="reporte2">No. De Carros Por Marca Registrados</string>
    <string name="reporte3">No. De Carros Por Color Registrados</string>
    <string name="num_de_carros">No. De Carros Registrados</string>
    <string name="no_carros_por_marca">No. De Carros Por Marca Registrados</string>
    <string name="no_carros_por_color">No. De Carros Por Color Registrados</string>
    <string name="el_no_carros_es">Carros Registrados:</string>
    <string name="el_no_carros_marca">Carros Registrados De Marca</string>
    <string name="el_no_carros_color">Carros Registrados De Color</string>
    <string name="es">Es</string>
    <string-array name="opciones">
        <item>@string/registrar_carros</item>
        <item>@string/listar_carros</item>
        <item>@string/reportes</item>
    </string-array>
    <string-array name="opciones_1">
        <item>@string/mazda</item>
        <item>@string/renault</item>
        <item>@string/toyota</item>
        <item>@string/chevrolet</item>
    </string-array>
    <string-array name="opciones_2">
        <item>@string/dosmildiez</item>
        <item>@string/dosmilonce</item>
        <item>@string/dosmildoce</item>
        <item>@string/dosmiltrece</item>
        <item>@string/dosmilcatorce</item>
        <item>@string/dosmilquince</item>
    </string-array>
    <string-array name="opciones_3">
        <item>@string/rojo</item>
        <item>@string/blanco</item>
        <item>@string/negro</item>
    </string-array>
    <string-array name="opciones_4">
        <item>@string/reporte1</item>
        <item>@string/reporte2</item>
        <item>@string/reporte3</item>
    </string-array>
    <string name="title_activity_no_de_carros">NoDeCarros</string>
    <string name="reporte">Reporte</string>
    <string name="calcular">Calcular</string>
</resources>
